frontend/src/styles/lesson.css
.lesson-container-1 {
  display:flex;
  flex-direction: column;
  height:85vh;
  
}
#lesson-form {
display:flex;
flex-direction: column;
align-items: center;
justify-content: center;
height:85vh;

}
.lesson-container-1a {
  width:100%;
  flex:2;
  display: flex;
  flex-direction: row; 
}
.lesson-container-1aa {
  flex:2;
}
.lesson-container-1ab {
  flex:10;
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  color: white;
}
.lesson-container-1ac {
  flex:2;
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  color: white;
}

.lesson-container-1b {
  width:100%;
  flex:8;
  display: flex;
  flex-direction: row;
  justify-content: center;
}
.lesson-container-1ba {
  width:60%;
  border: 2px solid black;
  display: flex;
  flex-direction: column;
  width: 100%;
  align-items: center;
  justify-content: center;
  gap:10%;
}
.lesson-container-1c {
  width:100%;
  flex:3;
  display: flex;
  flex-direction: row;
  gap:10%;
  justify-content: center;
  align-items: center;
}
.lesson-button {
  width:15%;
  border-radius: 10px;
  border: none;
  border: 2px solid grey;
  color: white;
  font-size: 1.2em;
}

.lesson-button-placeholder {
  width:15%;
  border: none;
  background-color: none;
}
.lesson-button:hover {
  cursor: pointer;
}

.lesson-l1 {
height:20%;
border: 2px solid black;
width: 40%;
height: 20%;
display: flex;
font-size: 1.2em;
display: grid;
grid-template: repeat(1fr, 4) / repeat(1fr, 4);

}
.l1{
  grid-row: 1/2;
  grid-column:2/4;

}
.peek-icon{
  grid-row: 1/2;
  grid-column: 4/5;
}
.peek-icon:hover{
  cursor: pointer;
}
.peeked-phrase {
  color:green;
  grid-row: 3/4;
  grid-column:2/4;
}
.lesson-l2 {
  height:20%;
  border: 2px solid black;
  text-align: center;
  font-size: 1.2em;
  width: 40%;
  height: 40%;
  border-radius: 10px;
  }

  .progress-bar {
    border: 1px solid black;
    border-radius: 10px;
  }
  .total {
    width:80%;
    height:30%;
  }

  .completed {
    height:100%;
    border: 1px solid black;
    border-radius: 10px;
    background-color: green;
    background-image: 
    linear-gradient(
      120deg,
      rgba(0,0,0, 0) 20%,
      rgba(255, 255, 255, .7),
      rgba(0,0,0, 0) 70%
  );
  }

  .lesson-check {
      height:35%;
  }

  .lesson-skip {
    height:35%;
}

.lesson-similarity {
  height:100%;
  width: 30%;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-size: 2em;
  border-radius: 10px;

}

.home {
  height:50px;
  width: 10%;
  display: flex;
  justify-content: center;
  align-items: center;
  
}

.close-button:hover {
  cursor: pointer;
}

.feedback {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap:20px;
  justify-content: center;
  height:100%;
  border-radius: 10px;
}

.add-phrases {
  color: black;
  display:flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-size: 1.5em;

  padding:20px;

}

.add-phrases-content {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  gap:50px;
}
.category-name {
  color: white;
  align-self:flex-end;
  margin-top:20px;
  margin-right: 50px;
}

.loading{
  color: #53736A;
  animation: spin 1s infinite linear;
}
@keyframes spin {
  from {
      transform: scale(1.7) rotate(0deg);
  }
  to {
      transform: scale(1.7) rotate(360deg);
  }
}
.default-button:hover {
  color: rgb(220, 220, 220)
}

